[package]
name = "rustkafka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kafka = "0.9"
rand = "0.8.5"

[[bin]]
name = "consumer"
path = "src/consumer.rs"

[[bin]]
name = "producer"
path = "src/producer.rs"